// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codec byte goldens (#22) > seed 1: encoded keyframe byte hash 1`] = `
{
  "byteLength": 43100,
  "hash": "5f2c51e6",
}
`;

exports[`codec byte goldens (#22) > seed 42: encoded keyframe byte hash 1`] = `
{
  "byteLength": 43100,
  "hash": "165a9690",
}
`;

exports[`codec byte goldens (#22) > seed 1337: encoded keyframe byte hash 1`] = `
{
  "byteLength": 43100,
  "hash": "0af17e10",
}
`;
